# advent_of_code

./: .gitignore  Cargo.toml  Project.toml  download_day  download_day.fish  download_day.sh
2022/Advent/lib/: dune
2022/day1/: solution.jl
2022/day10/: solution.jl
2022/day11/: solution.jl
2022/day12/: solution.jl
2022/day2/: solution.jl
2022/day3/: solution.jl
2022/day4/: solution.jl
2022/day5/: solution.jl
2022/day6/: solution.jl
2022/day7/: solution.jl
2022/day8/: solution.jl
2022/jul-ia/src/: AdventOfCode.jl
2022/jul-ia/src/y2022/: day1.jl  day10.jl  day11.jl  day12.jl  day15.jl  day19.jl  day3.jl  day4.jl  day6.jl  day8.jl
2022/rustmas/src/y2022/: day1.rs  day2.rs  day7.rs  day9.rs
2023/elf_caml/: dune-project
2023/elf_caml/lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day1.ml  day2.ml  dune  input.ml
2023/elf_caml/test/: dune
2024/mixmas/: .gitignore  Makefile  README.md  mix.exs
2024/mixmas/lib/: mixmas.ex
2024/mixmas/lib/mix/tasks/: d00.ex  d01.ex  d02.ex  d03.ex  d04.ex  d05.ex  d06.ex  d11.ex
2024/mixmas/test/: mixmas_test.exs
Advent/: dune-project
Advent/lib/: Advent.ml  input.ml
Advent/test/: dune
day1/: solution.jl
src/: AdventOfCode.jl  AdventOfCode.jl.save  main.rs
src/y2022/: day1.jl  day1.rs  day10.jl  day11.jl  day12.jl  day13.rs  day14.jl  day16.rs  day17-stolen.rs  day17.rs  day18.rs  day19.jl  day2.jl  day2.rs  day3.jl  day4.jl  day5.jl  day6.jl  day6.rs  day7.jl  day7.rs  day8.jl  day9.rs  mod.rs
