[package]
name = "advent_of_code"
version = "24.12.2022"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
ndarray = "0.15.6"
parse = "0.1.2"
petgraph = "0.6.2"
regex = "1.7.0"
serde = "1.0.150"
serde_derive = "1.0.150"
serde_json = "1.0.89"
sscanf = "0.4.0"
